appId: com.junewiregames.starborn.prealpha
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "New Game"
    timeout: 15000
- tapOn: "New Game"
- extendedWaitUntil:
    visible: "Dialogue Popup. Tap to continue"
    timeout: 20000
- tapOn: "Dialogue Popup. Tap to continue"
- extendedWaitUntil:
    notVisible: "Dialogue Popup. Tap to continue"
    timeout: 20000
- takeScreenshot: dialogue-advanced
